--- a/devops/Hands-on-Kohort-EU&10/docker/20201018-docker-01-installing-on-ec2-linux2/docker-installation-template.yml
+++ b/devops/Hands-on-Kohort-EU&10/docker/20201018-docker-01-installing-on-ec2-linux2/docker-installation-template.yml
@@ -28,7 +28,7 @@ Resources:
   DockerMachine:
     Type: AWS::EC2::Instance
     Properties:
-      ImageId: ami-0e1d30f2c40c4c701
+      ImageId: ami-03ededff12e34e59e
       InstanceType: t2.micro
       KeyName: !Ref KeyPairName
       SecurityGroupIds:
@@ -45,6 +45,7 @@ Resources:
           systemctl start docker
           systemctl enable docker
           usermod -a -G docker ec2-user
+          newgrp docker
           # install docker-compose
           curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" \
           -o /usr/local/bin/docker-compose
