20201104-jenkins-03-building-jenkins-pipeline handson was repeated

--- a/devops/Hands-on-Kohort-EU&10/docker/20201027-docker-06-compose-operations/composetest/docker-compose.yml
+++ b/devops/Hands-on-Kohort-EU&10/docker/20201027-docker-06-compose-operations/composetest/docker-compose.yml
@@ -3,6 +3,6 @@ services:
   web:
     build: .
     ports:
-      - "90:5000" # EC2 da 90 portunu ac,ayi unutma
+      - "5000:5000" # EC2 da 5000 portunu acmayi unutma
   redis:
     image: "redis:alpine"
