--- a/devops/Hands-on-Kohort-EU&10/docker/20201024-docker-05-image-basic-operations/Dockerfile
+++ b/devops/Hands-on-Kohort-EU&10/docker/20201024-docker-05-image-basic-operations/Dockerfile
@@ -1,6 +1,8 @@
-FROM python:alpine
+FROM ubuntu
+RUN apt-get update -y
+RUN apt-get install python3 -y
+RUN apt-get install python3-pip -y
+RUN pip3 install flask
 COPY . /app
 WORKDIR /app
-RUN pip install -r requirements.txt
-EXPOSE 80
-CMD python ./welcome.py
+CMD python3 ./welcome.py
