--- a/devops/Hands-on-Kohort-EU&10/docker/20201031-docker-08-swarm-basic-operations/clarusway-docker-swarm-cfn-template.yml
+++ b/devops/Hands-on-Kohort-EU&10/docker/20201031-docker-08-swarm-basic-operations/clarusway-docker-swarm-cfn-template.yml
@@ -6,7 +6,7 @@ Description: >
   The AMI of Clarusway Compose enabled Docker Machine (clarusway-docker-machine-with-compose-amazon-linux-2)
   is published on North Virginia Region for educational purposes. 
   Docker Machines will run on Amazon Linux 2 with custom security group 
-  allowing SSH (22), HTTP (80) and TCP(2377, 8080) connections from anywhere.
+  allowing SSH (22), HTTP (80), TCP(2377, 7946, 8080) and UDP (4789, 7946) connections from anywhere.
   User needs to select appropriate key name when launching the template.
 
 Parameters:
@@ -32,6 +32,18 @@ Resources:
         - IpProtocol: tcp
           FromPort: 2377
           ToPort: 2377
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 7946
+          ToPort: 7946
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: udp
+          FromPort: 7946
+          ToPort: 7946
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: udp
+          FromPort: 4789
+          ToPort: 4789
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 8080
