201-dockerization-bookstore-api-on-python-flask-mysql-Terraform handson has been done

--- a/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql-Terraform/docker-compose.yml
+++ b/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql-Terraform/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   
 
   my-app:
-    image: serdarcw/bookstore:latest
+    image: safaksrd/bookstore
     restart: always
     depends_on:
       - database
