--- a/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql-AWS_CloudFormation/cf-templates.yml
+++ b/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql-AWS_CloudFormation/cf-templates.yml
@@ -49,14 +49,14 @@ Resources:
           -o /usr/local/bin/docker-compose
           chmod +x /usr/local/bin/docker-compose
           mkdir -p /home/ec2-user/bookstore-api
-          TOKEN="0566251ac224261b371322bcbff991b60c52f6ce"
+          TOKEN="xxxx"
           FOLDER="https://$TOKEN@raw.githubusercontent.com/serdarcw/Deneme-201/master/"
           curl -s --create-dirs -o "/home/ec2-user/bookstore-api/bookstore-api.py" -L "$FOLDER"bookstore-api.py
           curl -s --create-dirs -o "/home/ec2-user/bookstore-api/requirements.txt" -L "$FOLDER"requirements.txt
           curl -s --create-dirs -o "/home/ec2-user/bookstore-api/Dockerfile" -L "$FOLDER"Dockerfile
           curl -s --create-dirs -o "/home/ec2-user/bookstore-api/docker-compose.yml" -L "$FOLDER"docker-compose.yml
           cd /home/ec2-user/bookstore-api
-          docker build -t "serdarcw/bookstore:latest" .
+          docker build -t "safaksrd/bookstore:latest" .
           docker-compose up -d
 Outputs:
   WebsiteURL:
