202-Terraform-Phonebook-Application-deployed-on-AWS new changes

--- a/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql-AWS_CloudFormation/image_file/docker-compose.yml
+++ b/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql-AWS_CloudFormation/image_file/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   
 
   my-app:
-    image: safaksrd/bookstore
+    image: safaksrd/bookstore:cfn
     restart: always
     depends_on:
       - database
