--- a/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql-Terraform/image_file/docker-compose.yml
+++ b/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql-Terraform/image_file/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   
 
   my-app:
-    image: safaksrd/bookstore:latest
+    image: safaksrd/bookstore:tf
     restart: always
     depends_on:
       - database
