--- a/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql-Terraform/image_file/Dockerfile
+++ b/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql-Terraform/image_file/Dockerfile
@@ -3,6 +3,6 @@ COPY . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
 EXPOSE 80
-CMD ["python", "app.py"]
+CMD ["python", "bookstore-api.py"]
 
 
