--- a/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql-CloudFormation/cf-templates.yml
+++ b/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql-CloudFormation/cf-templates.yml
@@ -28,7 +28,7 @@ Resources:
   DockerMachine:
     Type: AWS::EC2::Instance
     Properties:
-      ImageId: ami-09d95fab7fff3776c
+      ImageId: ami-0f9fc25dd2506cf6d
       InstanceType: t2.micro
       KeyName: !Ref KeyPairName
       SecurityGroupIds:
@@ -49,14 +49,14 @@ Resources:
           -o /usr/local/bin/docker-compose
           chmod +x /usr/local/bin/docker-compose
           mkdir -p /home/ec2-user/bookstore-api
-          TOKEN="xxxx"
-          FOLDER="https://$TOKEN@raw.githubusercontent.com/safaksrd/Deneme-201/master/"
+          TOKEN="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"
+          FOLDER="https://$TOKEN@raw.githubusercontent.com/safaksrd/bookstore-repo-cfn/main/"
           curl -s --create-dirs -o "/home/ec2-user/bookstore-api/bookstore-api.py" -L "$FOLDER"bookstore-api.py
           curl -s --create-dirs -o "/home/ec2-user/bookstore-api/requirements.txt" -L "$FOLDER"requirements.txt
           curl -s --create-dirs -o "/home/ec2-user/bookstore-api/Dockerfile" -L "$FOLDER"Dockerfile
           curl -s --create-dirs -o "/home/ec2-user/bookstore-api/docker-compose.yml" -L "$FOLDER"docker-compose.yml
           cd /home/ec2-user/bookstore-api
-          docker build -t "safaksrd/bookstore:latest" .
+          docker build -t "safaksrd/bookstore:" .
           docker-compose up -d
 Outputs:
   WebsiteURL:
