--- a/devops/projects/203-1-without-jenkins-pipeline-phonebook-app-on-docker-swarm/Dockerfile
+++ b/devops/projects/203-1-without-jenkins-pipeline-phonebook-app-on-docker-swarm/Dockerfile
@@ -1,6 +1,8 @@
 FROM python:alpine
-COPY ./app /app
+COPY . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
 EXPOSE 80
 CMD python ./phonebook-app.py
+
+
