--- a/devops/projects/203-2-with-jenkins-pipeline-for-phonebook-app-on-docker-swarm/jenkins-with-git-docker-ecr-cfn.yml
+++ b/devops/projects/203-2-with-jenkins-pipeline-for-phonebook-app-on-docker-swarm/jenkins-with-git-docker-ecr-cfn.yml
@@ -112,9 +112,7 @@ Resources:
           unzip awscliv2.zip
           ./aws/install
           yum install python3 -y
-          amazon-linux-extras install epel -y
-          yum install python-pip -y
-          pip install ec2instanceconnectcli
+          pip3 install ec2instanceconnectcli
           yum install amazon-ecr-credential-helper -y
           mkdir -p /home/jenkins/.docker
           cd /home/jenkins/.docker
